@@ -1,3 +1,8 @@
+
+2007-06-19  Lynn Garren
+
+	* HepMC/GenParticle.h: use uint64_t for the serial number counter
+
   --------------------------  HepMC-2.01.00  --------------------------
 
 2007-06-08  Lynn Garren
